--- a/NEA/NEA.csproj
+++ b/NEA/NEA.csproj
@@ -61,10 +61,12 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="components\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
